Avoid links to "this page" or "here".  Remove some of the duplicate links to the SourceForge download area.

--- a/htdocs/fortran/index.html
+++ b/htdocs/fortran/index.html
@@ -25,8 +25,8 @@ available to the Fortran community.</p>
 
 <p>You can reach us at the
 <a href="mailto:fortran@gcc.gnu.org">fortran@gcc.gnu.org</a>
-mailing list.  For subscribing to the mailing list, see
-<a href="../lists.html">this page</a>.</p>
+mailing list; for details please refer to our
+<a href="../lists.html">mailing lists page</a>.</p>
 
 <h2>Project goal</h2>
 <p>We strive to provide a high quality release, which we want to work
@@ -71,18 +71,17 @@ page is preserved for historical reasons.</p>
 
 <dl>
 <dt><b>July 05, 2003</b></dt>
-<dd>New x86 GNU/Linux binaries have been released. Get them
-<a href="http://sourceforge.net/project/showfiles.php?group_id=70680">here</a>.
-Note these tend to get out of date fairly quicky, so it's reccommended
-that you compile your own from GCC CVS if
-possible.</dd>
+<dd>New x86 GNU/Linux binaries have been released
+(<a href="http://sourceforge.net/project/showfiles.php?group_id=70680">download</a>).
+Note these tend to get out of date fairly quicky, so it's recommended
+that you compile your own from GCC CVS if possible.</dd>
 
 <dt><b>July 27, 2003</b></dt>
 <dd>gcc-g95 has been integrated into the <a
 href="../projects/tree-ssa/">tree-ssa branch</a> of
 the <a href="../cvs.html">GCC CVS repository</a>
-(announcement on mailing list <a href="http://sourceforge.net/mailarchive/forum.php?thread_id=2840068&amp;forum_id=21262">here</a>). This
-branch of GCC will become part of official GCC releases by the time
+(<a href="http://sourceforge.net/mailarchive/forum.php?thread_id=2840068&amp;forum_id=21262">announcement</a>).
+This branch of GCC will become part of official GCC releases by the time
 GCC 3.5 is released. This web page and our mailing list will move to
 <a href="../">gcc.gnu.org</a> sometime soon.</dd>
 
@@ -91,10 +90,9 @@ GCC 3.5 is released. This web page and our mailing list will move to
 update your local copies and give our sources a try.</dd>
 
 <dt><b>July 05, 2003</b></dt>
-<dd>New x86 GNU/Linux binaries have been released. Get them
-<a href="http://sourceforge.net/project/showfiles.php?group_id=70680">here</a>.
-These include a complete FORALL implementation and some support for internal IO,
-amongst other things.</dd>
+<dd>New x86 GNU/Linux binaries have been released.
+These include a complete FORALL implementation and some support for internal
+IO, amongst other things.</dd>
 
 <dt><b>June 28, 2003</b></dt>
 <dd>We're sorry that anonymous access to our CVS is not up-to-date and
@@ -120,16 +118,12 @@ GCC.  The decision was made that G95 should soon be adopted in the tree-ssa
 branch in the GCC CVS repository.</dd>
 
 <dt><b>May 20, 2003</b></dt>
-<dd>New binaries for windows have been released. Get them <a
-href="http://sourceforge.net/project/showfiles.php?group_id=70680">here</a>
-(installation information can be found <a
-href="http://sourceforge.net/project/shownotes.php?release_id=160595">here</a>).
+<dd>New binaries for Windows have been released.
 You will need a working <a href="http://www.cygwin.com">cygwin</a> environment.</dd>
 
 
 <dt><b>May 20, 2003</b></dt>
-<dd>New x86 GNU/Linux binaries have been released. Get them
-<a href="http://sourceforge.net/project/showfiles.php?group_id=70680">here</a>.</dd>
+<dd>New x86 GNU/Linux binaries have been released.</dd>
 
 <dt><b>April 18, 2003</b></dt>
 <dd>The <code>SELECT CASE</code> construct with case expressions of the
