--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -53,7 +53,7 @@ to maintain and improve quality.</p>
 </dt><dd>
   Branch status:
      <a href="http://gcc.gnu.org/ml/gcc/2003-12/msg00128.html">2003-12-02</a>
-  (open for regression fixes).
+  (open for all bugfixes).
 </dd>
 
 <dt><strong>Previous release series:</strong>
