--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -422,7 +422,7 @@
 
 <h4>M32</h4>
   <ul>
-    <li>Support for the M32R/2 processor has been added by Renesas.
+    <li>Support for the M32R/2 processor has been added by Renesas.</li>
   </ul>
 
 <h4>M68000</h4>
