2003-12-12  Toon Moene  <toon@moene.indiv.nluug.nl>
	* index.html: Add pointer to contributors.html.
	* todo.html: Update and add pointers to bug reports.
	* contributors.html: New.

--- a/htdocs/fortran/index.html
+++ b/htdocs/fortran/index.html
@@ -47,6 +47,7 @@ of the <a href="librarystatus.html">run time library development</a>.
 We also keep a <a href="todo.html">TODO list</a>.</p>
 
 <h2>Contributing</h2>
+<p>Get your name on the <a href=contributors.html>list of contributors</a> !</p>
 <p>We encourage everyone to <a href="../contribute.html">contribute changes</a>
 and help test G95.  G95 is developed on the so-called "tree-ssa" branch of GCC.
 We provide read access to our development sources for everybody with
