--- a/htdocs/fortran/todo.html
+++ b/htdocs/fortran/todo.html
@@ -8,17 +8,24 @@
 <h1>G95: Open Projects</h1>
 
 <p>This list is probably not complete, but it seems long enough
-already :-)</p>
+already :-)  Some of the items are also filed as a bug report
+in our <a href=http://gcc.gnu.org/bugzilla/>bugzilla problem
+report database</a> as indicated below.</p>
+
+<h2>Compiler driver</h2>
+<ul>
+   <li>Call f951 for files ending in .f (using -ffixed-form).</li>
+   <li>Call the C preprocessor for files ending in .F, .F90 and .F95.</li>
+   <li>Remove or redefine -fg77-calls.</li>
+</ul>
 
 <h2>Parser</h2>
 <ul>
-  <li>Give NULL() pointer correct attributes</li>
-  <li>Fix array constructor handling in expressions and
-  intrinsics</li>
+  <li>Give NULL() pointer correct attributes.</li>
+  <li>Fix array constructor handling in expressions and intrinsics.</li>
   <li>Complete implementation of section 14.1.2: Procedure type resolution
   rules.</li>
-  <li>Implement resolution of COMMON blocks and EQUIVALENCE
-  associations</li>
+  <li>Implement resolution of COMMON blocks and EQUIVALENCE associations.</li>
   <li>Fix other issues in the type/name resolution phase.</li>
   <li>Improve diagnostics, some of them are cryptic or point to the
   wrong place.</li>
@@ -33,10 +40,12 @@ already :-)</p>
 
 <h2>Middle-end Interface</h2>
 <ul>
-  <li>Support for arrays of character strings.</li>
-  <li>Support for character string array constructors.</li>
+  <li>Support for arrays of character strings
+      (<a href=http://gcc.gnu.org/PR12842>PR12842</a>).</li>
+  <li>Support for character string array constructors (ditto).</li>
   <li>Implement functions returning derived types.</li>
-  <li>Support alternate ENTRY points.</li>
+  <li>Support alternate ENTRY points
+      (<a href=http://gcc.gnu.org/PR13082>PR13082</a>).</li>
   <li>Correctly initialize POINTER variables.</li>
   <li>Handle constant initializers for derived types.</li>
   <li>Handle character string parameters.</li>
@@ -51,9 +60,25 @@ already :-)</p>
       initializers.</li>
   <li>Use of array parameters in array declarations.</li>
   <li>Teach the scalarizer bounds calculation code about functions.</li>
-  <li>Fix g77/f2c compatibility for returning complex numbers, and other
-      wierdness.</li>
-  <li>Fix sequence association for non-g77 compatible fucntions.</li>
+</ul>
+
+
+<h2>Run time library</h2>
+<ul>
+   <li>Complete the implementation of direct access I/O
+       (<a href=http://gcc.gnu.org/PR12921>PR12921</a>).</li>
+   <li>Complete the implementation of derived type I/O
+       (<a href=http://gcc.gnu.org/PR13278>PR13278</a> and
+        <a href=http://gcc.gnu.org/PR13280>PR13280</a>).</li>
+</ul>
+
+
+<h2>g77 compatibility</h2>
+<ul>
+   <li>Implement Hollerith data.</li>
+   <li>Implement the -fugly- family of compiler options.</li>
+   <li>Fix g77/f2c compatibility for returning complex numbers, and other
+       wierdness.</li>
 </ul>
 
 
@@ -62,15 +87,16 @@ already :-)</p>
 <ul>
   <li>Figure out what causes the remaining testsuite parse failures.</li>
   <li>Add more testcases to the execution test suite.</li>
-  <li>Add negative tests (ie check invalid code is rejected)</li>
+  <li>Add negative tests (ie check invalid code is rejected).</li>
 </ul>
 
 
 <h2>Documentation</h2>
 
 <ul>
-  <li>Finish (start?) infopages, manpages and other
-  documentation.</li>
+  <li>Finish (start?) infopages and other documentation.</li>
+  <li>Split out an "invoke.texi" so that a man page can be generated
+  automatically.</li>
   <li>Maintain web page.</li>
 </ul>
 
