--- a/htdocs/fortran/todo.html
+++ b/htdocs/fortran/todo.html
@@ -9,7 +9,7 @@
 
 <p>This list is probably not complete, but it seems long enough
 already :-)  Some of the items are also filed as a bug report
-in our <a href=http://gcc.gnu.org/bugzilla/>bugzilla problem
+in our <a href="http://gcc.gnu.org/bugzilla/">bugzilla problem
 report database</a> as indicated below.</p>
 
 <h2>Compiler driver</h2>
@@ -41,11 +41,11 @@ report database</a> as indicated below.</p>
 <h2>Middle-end Interface</h2>
 <ul>
   <li>Support for arrays of character strings
-      (<a href=http://gcc.gnu.org/PR12842>PR12842</a>).</li>
+      (<a href="http://gcc.gnu.org/PR12842">PR12842</a>).</li>
   <li>Support for character string array constructors (ditto).</li>
   <li>Implement functions returning derived types.</li>
   <li>Support alternate ENTRY points
-      (<a href=http://gcc.gnu.org/PR13082>PR13082</a>).</li>
+      (<a href="http://gcc.gnu.org/PR13082">PR13082</a>).</li>
   <li>Correctly initialize POINTER variables.</li>
   <li>Handle constant initializers for derived types.</li>
   <li>Handle character string parameters.</li>
@@ -66,10 +66,10 @@ report database</a> as indicated below.</p>
 <h2>Run time library</h2>
 <ul>
    <li>Complete the implementation of direct access I/O
-       (<a href=http://gcc.gnu.org/PR12921>PR12921</a>).</li>
+       (<a href="http://gcc.gnu.org/PR12921">PR12921</a>).</li>
    <li>Complete the implementation of derived type I/O
-       (<a href=http://gcc.gnu.org/PR13278>PR13278</a> and
-        <a href=http://gcc.gnu.org/PR13280>PR13280</a>).</li>
+       (<a href="http://gcc.gnu.org/PR13278">PR13278</a> and
+        <a href="http://gcc.gnu.org/PR13280">PR13280</a>).</li>
 </ul>
 
 
