Some minor tweaks while reviewing this page.

--- a/htdocs/fortran/librarystatus.html
+++ b/htdocs/fortran/librarystatus.html
@@ -7,21 +7,23 @@
 <h1>G95: Runtime library status</h1>
 
 <h2>Contents</h2>
+
 <p><a href="#io">IO Library Status</a><br />
 <a href="#intrinsic">Implementation status of intrinsic functions and subroutines</a></p>
 
 
 <h2><a name="io">IO Library Status</a></h2>
 
-
-<p>Everything breaks if the libgfor main(0 startup library isn't used. This
+<p>Everything breaks if the libgfor main(0 startup library is not used. This
 should be fairly easy to fix using constructor functions.</p>
+
 <p>Some formatted IO of integers.  The current implementation will silently 
 ignore many IO commands.</p>
+
 <p>The library is not thread-safe.  This will have to be fixed because OpenMP
 allows threaded IO.</p>
-<p><b>TODO: Figure out what the IO library can really do</b></p>
 
+<p><em>TODO: Figure out what the IO library can really do</em></p>
 
 
 <h2><a name="intrinsic">Implementation status of intrinsic functions and subroutines</a></h2>
@@ -40,13 +42,13 @@ whether to use inline code (good for small arrays as no function call
 overhead) or generate function calls (good for large arrays as it allows use of
 hand-optimized assembly routines, SIMD instructions, etc.)</p>
 
-<p> Implementations marked <b>*</b> are performed by the frontend, and
+<p>Implementations marked <b>*</b> are performed by the frontend, and
 are never seen by the code generation routines.  Other calls may also
 be eliminated if their value is known at compile time. Intrinsics
 marked <b>**</b> are implemented by means of inline code.  There is no
 code for these in the library.</p>
 
-<center><table width="80%" border="2" summary="intrinsics status">
+<table width="80%" border="2" summary="intrinsics status">
 <tr><th>Name</th><th>Status</th><th>Testsuite</th></tr>
 <tr><td>ABS</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#00FF00">YES</td></tr>
 <tr><td>ACHAR</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#FF0000">NO</td></tr>
@@ -163,11 +165,8 @@ code for these in the library.</p>
 <tr><td>UBOUND</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#FF0000">NO</td></tr>
 <tr><td>UNPACK</td><td bgcolor="#00FF00">Implemented</td><td bgcolor="#00FF00">YES</td></tr>
 <tr><td>VERIFY</td><td bgcolor="#FF0000">Not implemented</td><td bgcolor="#FF0000">NO</td></tr>
-</table></center>
+</table>
 
 </body>
 
 </html>
-
-
-
