--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -8,7 +8,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2003-12-21.
+2003-12-22.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -179,6 +179,29 @@ differences are currently required.</p>
 <tr> <td>javax.naming.spi.ResolveResult</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.spi.ResolveResult.diff">Diff</a></td> </tr>
 <tr> <td>javax.naming.spi.Resolver</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.spi.Resolver.diff">Diff</a></td> </tr>
 <tr> <td>javax.naming.spi.StateFactory</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.spi.StateFactory.diff">Diff</a></td> </tr>
+<tr> <td>javax.print.attribute.AttributeSetUtilities</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.DateTimeSyntax</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.DocAttribute</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.DocAttributeSet</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.EnumSyntax</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.HashAttributeSet</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.HashDocAttributeSet</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.HashPrintJobAttributeSet</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.HashPrintRequestAttributeSet</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.HashPrintServiceAttributeSet</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.IntegerSyntax</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.PrintJobAttribute</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.PrintJobAttributeSet</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.PrintRequestAttribute</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.PrintServiceAttribute</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.PrintServiceAttributeSet</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.ResolutionSyntax</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.SetOfIntegerSyntax</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.Size2DSyntax</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.SupportedValuesAttribute</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.TextSyntax</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.URISyntax</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
+<tr> <td>javax.print.attribute.UnmodifiableSetException</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> </tr>
 <tr> <td>javax.rmi.BAD_OPERATION</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.rmi.CORBA.ObjectImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.rmi.CORBA.SystemException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
