--- a/htdocs/simtest-howto.html
+++ b/htdocs/simtest-howto.html
@@ -169,7 +169,7 @@ make check-gcc RUNTESTFLAGS=--target_board=arm-sim
 <tr valign="top">
  <td>h8300-coff</td>
  <td>h8300-sim</td>
- <td>big endian</td>
+ <td>cc0 target, big endian</td>
  <td>
  <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00624.html">3.3 20030509 (prerelease)</a>
  <br />
