Deprecate -fwritable-strings

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -139,7 +139,8 @@
 	built-in functions</a> such as <code>__builtin_popcount</code>
 	for counting bits, finding the highest and lowest bit in a
 	word, and parity have been added.</li>
-
+    <li>The <code>-fwritable-strings</code> option has been deprecated
+        and will be removed.</li>
   </ul>
 
 <h3>C++</h3>
