Add PowerPC Darwin news.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -448,6 +448,17 @@
     compatibility with earlier releases.</li>
   </ul>
 
+<h4>PowerPC Darwin</h4>
+  <ul>
+    <li>Support for shared/dylib gcc libraries has been added. It is
+      enabled by default on <code>powerpc-apple-darwin7.0.0</code>
+      and up.</li>
+
+    <li>Libgcj is enabled by default. On systems older than <code>
+      powerpc-apple-darwin7.0.0</code> you need to install <a
+      href="http://www.opendarwin.org/projects/dlcompat"> dlcompat</a>. </li>
+  </ul>
+
 <h4>SuperH</h4>
   <ul>
     <li>Support for the SH2E processor has been added.
