--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -218,6 +218,14 @@ NOTE: the submitter reported that thread support is broken and asked
 </tr>
 
 <tr>
+<td>i386-pc-solaris2.9</td>
+<td>GNU as and ld from Sun</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-11/msg01417.html">3.3.2</a>
+</td>
+</tr>
+
+<tr>
 <td>i386-unknown-freebsd4.8</td>
 <td>GNU make, build in objdir</td>
 <td>Test results:
@@ -497,6 +505,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>i686-pc-linux-gnu</td>
 <td>Slackware 9.0, glibc 2.3.1, kernel 2.4.20</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-10/msg00413.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg02212.html">3.3</a>
 </td>
 </tr>
@@ -541,6 +550,14 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00967.html">3.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00438.html">3.3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>ia64-hp-hpux11.22</td>
+<td>as from binutils 2.14</td>
+<td>Bootstrap (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2003-12/msg01313.html">3.3.2</a>
 </td>
 </tr>
 
@@ -670,9 +687,18 @@ NOTE: the submitter reported that thread support is broken and asked
 </tr>
 
 <tr>
+<td>powerpc-ibm-aix4.1.5.0</td>
+<td>&nbsp;</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-10/msg00110.html">3.3.1</a>
+</td>
+</tr>
+
+<tr>
 <td>powerpc-ibm-aix5.2.0.0</td>
 <td>&nbsp;</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-11/msg01493.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-11/msg00697.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01612.html">3.3</a>
 </td>
