--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -841,6 +841,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>SuSE 8.0, glibc 2.2.4, kernel 2.4.18</td>
 <td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2003-12/msg01212.html">3.2.3</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-02/msg01196.html">3.2.2</a></td>
 </tr>
 
