Add a note on the savannah.gnu.org compromise and disable instructions for anonymous CVS access.  Shorten the reference to the CVS docs.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -28,6 +28,8 @@ is in our repository or our <a href="#wwwdocs">web pages</a>.</p>
 
 <h2>Using the CVS repository</h2>
 
+<!--
+
 <p>Assuming you have <a href="http://www.cvshome.org/">CVS</a> installed on
 your machine you can check out the GCC sources with the following sequence
 of commands:</p>
@@ -48,12 +50,17 @@ to check out the compiler sources, respectively
 <blockquote><p><code>cvs -z 9 co -P wwwdocs</code></p></blockquote>
 <p>to check out our web pages.</p>
 
-<p>Once you've got the repository checked out, <code>cvs update</code>
-will sync your local copy with the repository.  See the CVS manual for
-additional information on how to use CVS.</p>
+<p>See the CVS documentation for additional information.</p>
 
 <p>In case of problems with the repository at subversions.gnu.org please
 contact savannah-hackers@gnu.org.</p>
+
+-->
+
+<p>The CVS server of the GNU project that used to provide anonymous access
+to our sources was hacked, so we currently do not offer anonymous access.
+(Note that our CVS repository for developers resides on a completely
+different server which was not compromised.)</p>
 
 <h3><a name="generated_files"></a>Generated files</h3>
 
