* done.html: Rework the introduction a bit. 	Fix broken link to Tamanoir.

--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -8,14 +8,13 @@
 
       <h1>Done with GCJ</h1>
 
-      This page provides descriptions and links on projects
+      <p>This page provides descriptions and links on projects
       that are using the GCJ runtime and compiler. If you would like
       your project to be listed here or know about a particular
       project, please write to the <a
-      href="mailto:java@gcc.gnu.org">list</a>.
-      <p>
-      Entries are now listed in chronological order.
-      </p>
+      href="mailto:java@gcc.gnu.org">java@gcc.gnu.org</a> list.</p>
+
+      <p>Entries are listed in chronological order.</p>
 
       <table border="0" cellpadding="1" cellspacing="2"
       rules="all" width="98%">
@@ -125,7 +124,8 @@
       <!-- End Swarm -->
       <!-- Tamanoir -->
       <tr valign="top">
-        <td><b><a href="http://www.ens-lyon.fr/~jpgelas/TAMANOIR/">
+        <td><b><a
+	href="http://perso.ens-lyon.fr/jean-patrick.gelas/TAMANOIR/">
 	Tamanoir</a></b></td>
 	<td>Tamanoir system is a complete framework that allows users
 	    to easily deploy and maintain distributed active routers
