Fix System V PowerPC ABI link.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -573,7 +573,8 @@ names.
 
   <li><a href="http://www.caldera.com/developers/gabi/">The System V Application Binary Interface</a>, aka the ELF Generic ABI Specification.</li>
 
-  <li><a href="http://www.esofta.com/softspecs.html">System V PowerPC ABI</a></li>
+  <li><a href="http://refspecs.freestandards.org/elf/elfspec_ppc.pdf">System
+  V PowerPC ABI</a></li>
 
   <li><a href="http://www.arm.com/armwww.ns4/img/12-Technical+Specs-ARM+ELF+Specification+PDF/$File/ARMELFA08.pdf">ARM ELF ABI</a></li>
 
